log

Thu 14 Mar 2024 08:19:14 PM UTC: 
 exercises.c | 65 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 60 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:92:9: error: ‘i’ undeclared (first use in this function)
   92 |     for(i = 0; i < size - 2; i++)
      |         ^
exercises.c:92:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b6e00e8
Thu 14 Mar 2024 08:21:53 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:92:9: error: ‘i’ undeclared (first use in this function)
   92 |     for(i = 0; i < size - 2; i++)
      |         ^
exercises.c:92:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1053c1e
